# ugv-beast-robot-ws

./: .gitignore  CLAUDE.md  README.md  build_pi.sh  build_wsl.sh
dev/: cyclonedds.xml  disable_wifi_ap_fallback.sh  gpu_detector.py  robot_env.sh  setup_pi_container.sh  start_pi_stack.sh
docs/: ACTIONS.md  ARM.md  CAMERA.md  DASHBOARD_DESIGN.md  DEV_SETUP.md  DOCKER.md  HARDWARE.md  INDEX.md  LIDAR.md  NAVIGATION.md  PACKAGE_SUMMARY.md  SERVICES.md  SYSTEM_ARCHITECTURE.md  TF_TREE.md  TOPICS.md
src/robot_ai/: package.xml  setup.py
src/robot_ai/robot_ai/: ai_node.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/launch/: explore_mapping.launch.py  robot_pi.launch.py  robot_wsl.launch.py
src/robot_dashboard/: package.xml  setup.py
src/robot_dashboard/config/: dashboard.yaml.example
src/robot_dashboard/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/robot_dashboard/frontend/src/: App.tsx  index.css
src/robot_dashboard/frontend/src/components/: GlassCard.tsx  Joystick.tsx  Sidebar.tsx  StatusStrip.tsx  TfHealthTable.tsx
src/robot_dashboard/frontend/src/components/canvas/: CompassCanvas.tsx  LaserScanCanvas.tsx  MapCanvas.tsx  OdomTrailCanvas.tsx  useRafCanvas.ts
src/robot_dashboard/frontend/src/features/teleop/: useGamepadTeleop.ts  useKeyboardTeleop.ts
src/robot_dashboard/frontend/src/lib/: api.ts  odomTrail.ts  sensorTypes.ts  useChannelRef.ts  ws.ts
src/robot_dashboard/frontend/src/pages/: Controls.tsx  Dashboard.tsx  Logs.tsx  Nav.tsx  Placeholder.tsx  Sensors.tsx  Settings.tsx  Teleop.tsx
src/robot_dashboard/frontend/src/stores/: robot.ts  teleop.ts
src/robot_dashboard/launch/: dashboard.launch.py
src/robot_dashboard/robot_dashboard/: main.py
src/robot_dashboard/robot_dashboard/api/: routes.py
src/robot_dashboard/robot_dashboard/core/: config.py  lifespan.py
src/robot_dashboard/robot_dashboard/ros/: bridge.py
src/robot_dashboard/robot_dashboard/services/: camera.py  controls.py  launch_manager.py  system.py  telemetry.py  teleop.py  waypoints.py
src/robot_dashboard/robot_dashboard/ws/: manager.py  protocol.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: NavigateTo.action  RunSkill.action
src/robot_interfaces/msg/: Percept.msg
src/robot_interfaces/srv/: SetMode.srv
src/robot_manipulation/: package.xml  setup.py
src/robot_manipulation/robot_manipulation/: gimbal_node.py
src/robot_mcp/: package.xml  setup.cfg  setup.py
src/robot_mcp/robot_mcp/: mcp_server.py
src/robot_navigation/: package.xml  setup.py
src/robot_navigation/robot_navigation/: nav_bridge.py
src/robot_perception/: package.xml  setup.py
src/robot_perception/robot_perception/: detector_node.py  perception_node.py
src/robot_skills/: package.xml  setup.py
src/robot_skills/robot_skills/: mode_server.py  skill_server.py
