<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_ai</name>
  <version>0.1.0</version>
  <description>High-level AI/decision layer (LLM). Turns state into skill goals. [runs on WSL]</description>
  <maintainer email="greninja220324@gmail.com">shinchan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>
  <!-- LLM client (Ollama/Anthropic) is a pip dependency, not a ROS one -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
