<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_dashboard</name>
  <version>0.1.0</version>
  <description>Web dashboard for the UGV Beast: FastAPI+rclpy backend, React frontend. Talks to the Waveshare stack via ROS interfaces only.</description>
  <maintainer email="greninja220324@gmail.com">shinchan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>
  <!-- Standard Nav2 interface (not Waveshare-specific) — Waveshare's own
       ugv_interface/srv/MapSave has no server implementation anywhere in
       ugv_ws; what's actually configured and running is Nav2's own
       map_saver_server (see the map_saver: params in ugv_nav's yaml configs). -->
  <exec_depend>nav2_msgs</exec_depend>
  <!-- pip deps (not rosdep-resolvable everywhere): fastapi, uvicorn[standard], psutil, pydantic-settings -->

  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
