<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_perception</name>
  <version>0.1.0</version>
  <description>Perception: LiDAR + camera plumbing (perception_node, Pi) and YOLO detection (detector_node, WSL/GPU).</description>
  <maintainer email="greninja220324@gmail.com">shinchan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- detector_node only (WSL/GPU side, not rosdep-resolvable): pip install ultralytics
       (pulls in torch+CUDA). perception_node (Pi side) does not need this. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
